Sidd's white space fix

--- a/src-built-in/components/assets/sass/_windowTitleBar.scss
+++ b/src-built-in/components/assets/sass/_windowTitleBar.scss
@@ -20,7 +20,8 @@ $breakpoint-very-small-window: 175px;
     flex-direction: row;
     justify-content: center;
     background: $window-header-background-color;
-    width: 100%;
+    width: 100vw;
+    left: 0;
     z-index: 2147483641;
     top:0;
     font-family: 'Open Sans', sans-serif;
